--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -20,6 +20,9 @@
 					<option value="Rosian">Русский</option>
 				</select>
 			</form>
+
+		</div>
+		<div class="key7">
 			<div class="hmhm">
 				<div id="hmb">
 					<span></span>
@@ -37,12 +40,12 @@
 		</div>
 	</div>
 	<!--	JavaScript-->
-		<script>
-			const hmbBtn = document.getElementById("hmb");
-			const header = document.getElementById("header");
+	<script>
+		const hmbBtn = document.getElementById("hmb");
+		const header = document.getElementById("header");
 
-			hmbBtn.addEventListener("click", function () {
-				header.classList.toggle("active");
-			});
-		</script>
+		hmbBtn.addEventListener("click", function () {
+			header.classList.toggle("active");
+		});
+	</script>
 </header>
