--- a/src/main/resources/templates/hotels.html
+++ b/src/main/resources/templates/hotels.html
@@ -98,7 +98,7 @@
 					</a>
 			</ul>
 		</div>
-		
+
 		<style>
 			.carousel {
 				/* ... */
@@ -109,7 +109,6 @@
 					/* マーカーグループのスタイル　*/
 				}
 			}
-
 		</style>
 
 
@@ -124,14 +123,19 @@
 		<!--			<div class="log5"></div>-->
 		<!--		</div>-->
 		<!--おすすめのやど-->
+		<br><br>
+
 		<h2 class="midashi">おすすめの宿</h2>
 		<div class="recommend">
 			<div class="recommend2">
-				<img src="/image/1-11.jpg" width="100%">
-
+				<a href="">
+					<img src="/image/1-11.jpg" width="100%">
+				</a>
 			</div>
 			<div class="recommend2">
-				<img src="/image/1-13.jpg" width="100%">
+				<a href="">
+					<img src="/image/1-13.jpg" width="100%">
+				</a>
 			</div>
 
 		</div>
@@ -224,5 +228,7 @@
 	</main>
 
 </body>
+
+</html>y>
 
 </html>
