--- a/src/main/resources/static/css/Jung.css
+++ b/src/main/resources/static/css/Jung.css
@@ -6,7 +6,7 @@ html {
 
 header button {
 	font-family: 'M PLUS 1p', sans-serif;
-}
+}ｓ
 
 
 .logo {
@@ -278,8 +278,7 @@ button:hover {
 	justify-content: center;
 	align-items: center;
 	position: relative;
-	margin: 0 auto;
-	font-size: 1em;
+
 
 	width: 100%;
 	padding: 10px;
@@ -586,6 +585,7 @@ label {
 	border: none;
 	border-radius: 3px;
 	cursor: pointer;
+	
 }
 
 .error{
