--- a/src/main/resources/templates/hotelsdetail.html
+++ b/src/main/resources/templates/hotelsdetail.html
@@ -29,7 +29,7 @@
 				<p th:text="${hotels.detail}">
 				</p>
 				<h2 th:text="${hotels.price}+円"></h2>
-				<form th:action="@{/reservation/{id}(id=${hotels.id})}" method="post">
+				<form th:action="@{/reservation/{id}(id=${hotels.id})}" method="get">
 					<button>予約</button>
 				</form> 
 			</div>
