--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-	<a href="/hotels" class="logo"><img src="/image/休.com.png" width="12.5%"></a>
+	<a href="/hotels"><img src="/image/休.com.png" width="4.5%" class="logo"></a>
 	<div class="keyp">
 
 		<div class="key">
