--- a/src/main/resources/templates/hotelsdetail.html
+++ b/src/main/resources/templates/hotelsdetail.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
-	<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>商品詳細ページ</title>
-		<link rel="stylesheet" type="text/css" href="/css/Aikawa.css">
+<head>
+	<meta charset="UTF-8">
+	<title>商品詳細ページ</title>
+	<link rel="stylesheet" type="text/css" href="/css/Aikawa.css">
 
-		<!-- Google Fonts 読み込み -->
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap"
-			rel="stylesheet">
+	<!-- Google Fonts 読み込み -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap"
+		rel="stylesheet">
 
-	</head>
+</head>
 
-	<body>
-		<header th:replace="header">
-		</header>
+<body>
+	<header th:replace="header">
+	</header>
 
-		<div class="im">
-			<div class="mi">
-				<img th:src="${hotels.image}">
-			</div>
-			<div class="mi">
-				<h1 th:text="${hotels.name}"></h1>
-				<hr>
-				<p th:text="${hotels.detail}">
-				</p>
-				<h2 th:text="${hotels.price}+円"></h2>
-				<form th:action="@{/reservation/{id}(id=${hotels.id})}" method="get">
-					<button>予約</button>
-				</form> 
-			</div>
+	<div class="im">
+		<div class="mi">
+			<img th:src="${hotels.image}">
 		</div>
-		</main>
-		<hr>
-	</body>
+		<div class="mi">
+			<h1 th:text="${hotels.name}"></h1>
+			<hr>
+			<p th:text="${hotels.detail}">
+			</p>
+			<h2 th:text="${hotels.price}+円"></h2>
+			<form th:action="@{/reservation/{id}(id=${hotels.id})}" method="post">
+				<button>予約</button>
+			</form>
+		</div>
+	</div>
+	</main>
+	<hr>
 
-	</html>
+	<form>
+		
+		<textarea></textarea>
+		<button>送信</button>
+	</form>
+
+</body>
+
+</html>
