--- a/src/main/resources/static/css/tachiki.css
+++ b/src/main/resources/static/css/tachiki.css
@@ -9,10 +9,9 @@ header button {
 }
 
 .logo {
-
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 1%;
+	left: 1%;
 	z-index: 50;
 }
 
@@ -75,19 +74,28 @@ header button {
 	z-index: 60;
 }
 
-
-
 /*#header.active {*/
 /*	background-color: lightblue;*/
 /*}*/
 
 /*非アクティブ*/
+.hmhm {
+	text-align: -webkit-right;
+	margin-right: 32px;
+	margin-top: 24px;
+}
+
 #hmb {
 	width: 32px;
 	height: 28px;
 	cursor: pointer;
 	position: relative;
 	z-index: 30;
+}
+
+.keyp {
+	top: 0;
+	width: 100%;
 }
 
 #hmb span {
