--- a/src/main/resources/templates/hotels.html
+++ b/src/main/resources/templates/hotels.html
@@ -224,11 +224,16 @@
 					th:href="@{/hotels(page=${page.number + 1}, categoryId=${categoryId}, keyword=${keyword}, maxPrice=${maxPrice})}">&gt;</a>
 			</li>
 		</ol>
+		<div class="footer1">
+			<footer th:replace="footer">
+			</footer>
+		</div>
+
 
 	</main>
 
 </body>
 
-</html>y>
-
 </html>
+
+</html>>
