--- a/src/main/resources/static/css/Aikawa.css
+++ b/src/main/resources/static/css/Aikawa.css
@@ -150,7 +150,7 @@ nav ul li a {
 }
 
 .active::before {
-		content: '';
+	content: '';
 	position: fixed;
 	top: 0;
 	right: 0;
@@ -192,7 +192,7 @@ nav,
 footer {
 	background-color: rgb(0, 64, 128);
 	/* 背景色 */
-	text-align: center;
+/*	text-align: center;*/
 	color: #ffffff;
 	/* 文字色 */
 	padding-top: 16px;
@@ -1038,8 +1038,86 @@ a:hover {
 	opacity: 0.7;
 }
 
-.key7{
+.key7 {
 	position: absolute;
 	top: 3%;
 	right: 3%;
+}
+
+html {
+	font-family: sans-serif;
+}
+
+
+
+ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+a {
+	color: #999;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #000;
+}
+
+.flex {
+	display: flex;
+}
+
+hr {
+	height: 1px;
+	border: 0;
+	border-top: 1px solid #e5e7eb;
+}
+
+.footer {
+	width: 90%;
+	padding: 2rem;
+	font-size: 15px;
+	color: #999;
+	background: #fff;
+	margin: auto;
+}
+
+.footer__navi {
+	flex-wrap: wrap;
+	margin-bottom: 2rem;
+}
+
+.footer__navi li {
+	display: inline-block;
+}
+
+.footer__navi li:not(:last-child) {
+	margin-right: 16px;
+}
+
+.footer__logo {
+	display: inline-block;
+	margin-bottom: 1rem;
+}
+
+@media (min-width: 768px) {
+	.md-flex {
+		display: flex;
+	}
+
+	.md-justify-between {
+	justify-content:space-between;
+	}
+
+	.copyright {
+		text-align: left;
+	}
+}
+
+footer1{
+	margin: auto;
+	justify-content: center;
+	
 }
