--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -3,7 +3,7 @@
 	<div class="keyp">
 
 		<div class="key">
-			<form class="key1"><input input type="text" name="keyword" th:value="${keyword}" placeholder="キーワードを入力"
+			<form class="key1" action="/hotels"><input input type="text" name="keyword" th:value="${keyword}" placeholder="キーワードを入力"
 					class="poi2">
 				<button class="poi3">検索</button>
 			</form>
