--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -17,10 +17,10 @@
 		
 			</ul>
 		<form action="/mypage/edit" class="edit-form" method="post">
-				<input type="text" name="name" th:value="${name}" placeholder="*名前"><br>
-			<input type="email" name="email" th:value="${email}" placeholder="*メールアドレス"><br>
-			<input type="text" name="address" th:value="${address}" placeholder="*住所"><br>
-			<input type="text" name="tel" th:value="${tel}" placeholder="*電話番号" maxlength="11" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
+				<input type="text" name="name" th:value="${customers.name}" placeholder="*名前"><br>
+			<input type="email" name="email" th:value="${customers.email}" placeholder="*メールアドレス"><br>
+			<input type="text" name="address" th:value="${customers.address}" placeholder="*住所"><br>
+			<input type="text" name="tel" th:value="${customers.tel}" placeholder="*電話番号" maxlength="11" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
 		<div class="form-group" style="position: relative;">
             <input type="password" id="password" name="password" minlength="8" placeholder="*パスワード（半角英数字8文字以上）">
             <!--  비밀번호 표시 버튼  -->
