マイページのヘッダー修正

--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<!-- 헤더 삽입 -->
-	<span th:replace="header3"></span>
+	<header th:replace="header3"></header>
 
 	<!-- 마이페이지 타이틀 -->
 	<h1 class="mypage-title">マイページ</h1>
