--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -11,8 +11,8 @@ header button {
 .logo {
 
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 1%;
+	left: 1%;
 	z-index: 50;
 }
 
@@ -82,12 +82,21 @@ header button {
 /*}*/
 
 /*非アクティブ*/
+.hmhm {
+	text-align: -webkit-right;
+	margin-right: 32px;
+	margin-top: 24px;
+}
 #hmb {
 	width: 32px;
 	height: 28px;
 	cursor: pointer;
 	position: relative;
 	z-index: 30;
+}
+.keyp {
+	top: 0;
+	width: 100%;
 }
 
 #hmb span {
