--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -12,13 +12,16 @@
 				<span th:if="${account.name != null}" th:text="${account.name}+さんがログイン中"></span>
 			</form>
 			<form action="samplel.cgi" method="post" class="key4">
-				<select size="1" name="language">
-					<option value="Japanese">日本語</option>
-					<option value="English">English</option>
-					<option value="Chinese">中文</option>
-					<option value="Korean">한국어</option>
-					<option value="Rosian">Русский</option>
-				</select>
+
+				<label class="selectbox-3">
+					<select size="1" name="language">
+						<option value="Japanese">日本語</option>
+						<option value="English">English</option>
+						<option value="Chinese">中文</option>
+						<option value="Korean">한국어</option>
+						<option value="Rosian">Русский</option>
+					</select>
+				</label>
 			</form>
 
 		</div>
