--- a/src/main/resources/templates/hotelsdetail.html
+++ b/src/main/resources/templates/hotelsdetail.html
@@ -18,27 +18,33 @@
 <body>
 	<header th:replace="header">
 	</header>
-
-	<div class="im">
-		<div class="mi">
-			<img th:src="${hotels.image}">
+<hr>
+	<main>
+		<div class="im">
+			<div class="mi">
+				<img th:src="${hotels.image}" width="100%" height="350vh"><br>
+				<p th:text="${hotels.detail}" class="detail3">
+				</p>
+			</div>
+			<div class="mi">
+				<br><br>
+				<h1 th:text="${hotels.name}" class="mi"></h1>
+				<div class="oimo3">
+					<h4 class="oimo2" th:text="${hotels.address}"></h4>
+				</div>
+				<br><br><br><br><br><br><br>
+				<hr><br>
+				<h3 th:text="${hotels.price}+円" class="oimo"></h3><br>
+				<form th:action="@{/reservation/{id}(id=${hotels.id})}" method="get">
+					<button class="button-3">予約する</button>
+				</form>
+			</div>
 		</div>
-		<div class="mi">
-			<h1 th:text="${hotels.name}"></h1>
-			<hr>
-			<p th:text="${hotels.detail}">
-			</p>
-			<h2 th:text="${hotels.price}+円"></h2>
-			<form th:action="@{/reservation/{id}(id=${hotels.id})}" method="post">
-				<button>予約</button>
-			</form>
-		</div>
-	</div>
 	</main>
 	<hr>
 
 	<form>
-		
+
 		<textarea></textarea>
 		<button>送信</button>
 	</form>
