マイページのヘッダー：テキストの色変更

--- a/src/main/resources/templates/header3.html
+++ b/src/main/resources/templates/header3.html
@@ -30,10 +30,10 @@
 					<span></span>
 				</div>
 				<nav>
-					<ul>
-						<li><a href="/mypage">マイページ</a></li>
-						<li><a href="/logout" onclick="return confirm('ログアウトしますか？')">LOGOUT</a></li>
-						<li><a href="">SERVICE</a></li>
+					<ul style="list-style-type: none;">
+						<li><a href="/mypage" style="text-decoration: none;">マイページ</a></li>
+						<li><a href="/logout" onclick="return confirm('ログアウトしますか？')" style="text-decoration: none;">LOGOUT</a></li>
+						<li><a href="" style="text-decoration: none;">SERVICE</a></li>
 					</ul>
 				</nav>
 			</div>
