--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -44,6 +44,7 @@ header button {
 
 .banner li {
 	list-style: none;
+	color: #ffffff;
 }
 
 .keyp {
@@ -144,7 +145,7 @@ nav {
 
 nav ul li a {
 	/*background-color: rgb(255, 255, 255);*/
-	color: #000000;
+	color: #fff;
 	display: block;
 	margin-bottom: 16px;
 }
@@ -211,7 +212,7 @@ h4 {
 /* ヘッダー、ナビゲーションメニュー、フッター */
 nav,
 footer {
-	background-color: rgb(255, 96, 96);
+	background-color:rgb(0, 64, 128);
 	/* 背景色 */
 	text-align: center;
 	color: #ffffff;
