--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -17,15 +17,27 @@
 	<header th:replace="header3"></header>
 
 	<!-- 마이페이지 타이틀 -->
+	 <br>
 	<h1 class="mypage-title">マイページ</h1>
 
 	<!-- 양쪽 폼을 감싸는 wrapper -->
 	<div class="mypage-wrapper">
 
 		<!-- 왼쪽: 이미지 폼 -->
-		<div class="mypage-div">
-			<img class="mypage-image" th:src="${customers.image}" alt="プロフィール画像">
-		</div>
+	<div class="mypage-div">
+  <!-- 이미지가 있을 때 -->
+  <img class="mypage-image"
+       th:if="${customers.image != null and !#strings.isEmpty(customers.image)}"
+       th:src="@{${customers.image}}"
+       alt="プロフィール画像" />
+
+  <!-- 이미지가 없을 때 기본 이미지 -->
+  <img class="mypage-image"
+       th:unless="${customers.image != null and !#strings.isEmpty(customers.image)}"
+       src="/image/profile.jpg"
+       alt="デフォルト画像" />
+</div>
+
 
 		<!-- 오른쪽: 정보 및 버튼 폼 -->
 		<form class="mypage-form" th:action="@{/mypage/edit}" method="get">
