--- a/src/main/resources/templates/hotelsdetail.html
+++ b/src/main/resources/templates/hotelsdetail.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>商品詳細ページ</title>
 	<link rel="stylesheet" type="text/css" href="/css/Aikawa.css">
+	<link rel="stylesheet" type="text/css" href="/css/review.css">
 
 	<!-- Google Fonts 読み込み -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,11 +44,24 @@
 	</main>
 	<hr>
 
-	<form>
-
-		<textarea></textarea>
-		<button>送信</button>
-	</form>
+	<form th:action="@{/hotelsdetail/comment/{id}(id=${hotels.id})}" method="get">
+	    <div class="star-rating">
+	      <input type="radio" id="star5" name="star" value="5"><label for="star5">★</label>
+	      <input type="radio" id="star4" name="star" value="4"><label for="star4">★</label>
+	      <input type="radio" id="star3" name="star" value="3"><label for="star3">★</label>
+	      <input type="radio" id="star2" name="star" value="2"><label for="star2">★</label>
+	      <input type="radio" id="star1" name="star" value="1"><label for="star1">★</label>
+	    </div>
+	    <br><br>
+	    <textarea name="comment" rows="4" cols="50" placeholder="レビューを入力してください"></textarea><br><br>
+	    <button type="submit">レビュー送信</button>
+	  </form>
+	  
+	  <th:block th:each="review:${reviews}">
+	  	<span th:text="${review.star}"></span>
+		<span th:text="${review.comment}"></span>
+	  </th:block>
+	  
 
 </body>
 
