--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -18,6 +18,7 @@
 
 
 		<div th:each="hotels:${hotel}">
+			<a th:href="@{/hotelsdetail/{id}(id=${hotels.id})}">
 			<div class="flex">
 				<img th:src="${hotels.image}" height="120px" width="200px" class="history-image" alt="ホテル画像">
 				<div class="flex2">
