--- a/src/main/resources/static/css/tachiki.css
+++ b/src/main/resources/static/css/tachiki.css
@@ -143,7 +143,7 @@ nav {
 
 nav ul li a {
 	/*background-color: rgb(255, 255, 255);*/
-	color: #000000;
+	color: rgb(243, 243, 243);
 	display: block;
 	margin-bottom: 16px;
 }
