宿予約のCSS変更

--- a/src/main/resources/templates/header3.html
+++ b/src/main/resources/templates/header3.html
@@ -31,9 +31,9 @@
 				</div>
 				<nav>
 					<ul style="list-style-type: none;">
-						<li><a href="/mypage" style="text-decoration: none;">マイページ</a></li>
-						<li><a href="/logout" onclick="return confirm('ログアウトしますか？')" style="text-decoration: none;">LOGOUT</a></li>
-						<li><a href="" style="text-decoration: none;">SERVICE</a></li>
+						<li><a href="/mypage" style="text-decoration: none; color: white;">マイページ</a></li>
+						<li><a href="/logout" onclick="return confirm('ログアウトしますか？')" style="text-decoration: none; color: white;">LOGOUT</a></li>
+						<li><a href="" style="text-decoration: none; color: white;">SERVICE</a></li>
 					</ul>
 				</nav>
 			</div>
