--- a/src/main/resources/static/css/tachiki.css
+++ b/src/main/resources/static/css/tachiki.css
@@ -335,17 +335,6 @@ body {
 	justify-content: space-between;
 }
 
-.col {
-	padding-top: 8px;
-	background-color: #EFF0F7;
-	width: 24%;
-	height: 400px;
-	border-radius: 16px;
-	overflow: hidden;
-	box-shadow: 0px 0px -9px #777777;
-}
-
-
 
 .key2 {
 	color: #000000;
@@ -802,11 +791,35 @@ label {
 .flex {
 	display: flex;
 	border-bottom: #EFF0F7 15px solid;
+	background-color: #FFFFFF;
 	padding: 16px;
+	row-gap: 20px;
+/*	margin-bottom: 5vh;*/
 }
 
 body,
 header,
 footer {
 	width: 100%;
+}
+
+.history-yado {
+	text-decoration: none;
+	color: rgb(39, 39, 39);
+	flex-direction: column;
+}
+
+.flex:hover {
+	/* ホバー時の状態 */
+	filter: brightness(0.8);
+	/* 暗くする */
+	transition: filter 0.3s ease;
+	/* アニメーション効果 */
+}
+
+col{
+	background-color: #000000;
+}
+.bottom{
+	margin-bottom: 30px;
 }
